# smart-maintenance-core

./: Cargo.toml  Dockerfile  Patron-Hexagonal.md  README.md  queries.json
nexus-app/: Cargo.toml
nexus-app/src/: handlers.rs  main.rs  state.rs  ui.rs
nexus-core/: Cargo.toml
nexus-core/src/: domain.rs  error.rs  lib.rs  ports.rs
nexus-infra/: Cargo.toml
nexus-infra/src/: config.rs  http_client.rs  lib.rs  neo4j_repo.rs  tool_service.rs
nexus-infra/src/services/: tool_service.rs
templates/: base.html  dashboard.html  login.html
