[package]
name = "nexus-app"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-infra = { path = "../nexus-infra" }
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"  # <--- AÑADE ESTA LÍNEA