[package]
name = "nexus-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-core = { path = "../nexus-core" }
neo4rs = "0.7"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"  # <--- AÑADE ESTA LÍNEA